syntax = "proto3";

// 密钥对数据格式
message Keypair {
  bytes account = 1; //账户
  bytes seed = 2; // 种子
  bytes secret_key = 3; // 密钥
  bytes public_key = 4; // 公钥
  string type = 5; // 生成密钥的算法类型
  bytes cert = 6; // 证书
}

// 密钥对展示格式
message KeypairDisplay{
  bytes account = 1; //账户
  bytes public_key = 4; // 公钥
  string type = 5; // 生成密钥的算法类型
  bytes cert = 6; // 证书
}

// 密钥对list数据格式
message KeypairDisplayList {
  repeated KeypairDisplay keypair_display_list = 1; // 密钥对数组
}

// 数据库对应字段
message Keystore{
  bytes account = 1; // 账户
  bytes encrypt_code = 2; // 加密码，用户给/随机生成，用来加密公钥和seed
  string public_encrypt_type = 3; // 公钥+种子 加密类型
  string secret_encrypt_type = 4; // 私钥 加密类型
  bytes public_key = 5; // 公钥
  bytes secret_key = 6; // 私钥
  bytes cert = 7; // 证书
  string create_date = 8; // 生成时间
}

//数据库数据list
message KeystoreList{
  repeated Keypair keystore_list = 1;
}

// 签名结构体
message Sign{
  bytes account = 1; //账户
  string message = 2; //需签名的数据
}

// 解锁/上锁
message OptionLock{
  bytes account = 1;
  string encrypt_code = 2; // 解锁/上锁码
}
